--- a/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
+++ b/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy container app to Azure Web App - sdai-sbox-gh-actions-app001
+name: Build container app to Azure Container Registry - sdai-sbox-gh-actions-app001
 
 on:
   push:
@@ -33,19 +33,19 @@ jobs:
         tags: sdailabsboxeuwacr01.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_daa1c22753664ee6913bc2c12707f733 }}/ghactions:${{ github.sha }}
         file: ./Dockerfile
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   environment:
+  #     name: 'production'
+  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'sdai-sbox-gh-actions-app001'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_192e6045d819434c914f6e189154ade3 }}
-        images: 'sdailabsboxeuwacr01.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_daa1c22753664ee6913bc2c12707f733 }}/ghactions:${{ github.sha }}'
+  #   steps:
+  #   - name: Deploy to Azure Web App
+  #     id: deploy-to-webapp
+  #     uses: azure/webapps-deploy@v2
+  #     with:
+  #       app-name: 'sdai-sbox-gh-actions-app001'
+  #       slot-name: 'production'
+  #       publish-profile: ${{ secrets.AzureAppService_PublishProfile_192e6045d819434c914f6e189154ade3 }}
+  #       images: 'sdailabsboxeuwacr01.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_daa1c22753664ee6913bc2c12707f733 }}/ghactions:${{ github.sha }}'
