--- a/.github/workflows/03-deploy_sdai-sbox-gh-actions-app001.yml
+++ b/.github/workflows/03-deploy_sdai-sbox-gh-actions-app001.yml
@@ -5,7 +5,7 @@ name: Deploy app to Azure - sdai-sbox-gh-actions-app001
 
 on:
   workflow_run:
-    workflows: ["02-build_push_sdai-sbox-gh-actions-app001"]
+    workflows: ["Build container app to Azure Container Registry - sdai-sbox-gh-actions-app001"]
     branches: ["main"]
     types: 
       - completed
