fixed trigger order

--- a/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
+++ b/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
@@ -4,10 +4,18 @@
 name: Build container app to Azure Container Registry - sdai-sbox-gh-actions-app001
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    # Trigger when "01-python-app.yml" is done.
+    workflows: ["Python application"]
+    branches: ["main"]
+    types: 
+      - completed
   workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
 
 jobs:
   build:
