--- a/.github/workflows/03-deploy_sdai-sbox-gh-actions-app001.yml
+++ b/.github/workflows/03-deploy_sdai-sbox-gh-actions-app001.yml
@@ -10,6 +10,7 @@ on:
     branches: ["main"]
     types: 
       - completed
+  # this allows for manual trigger
   workflow_dispatch:
 
 jobs:
@@ -21,7 +22,7 @@ jobs:
 
     steps:
     - name: Log in to registry
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         registry: https://sdailabsboxeuwacr01.azurecr.io/
         username: ${{ secrets.AzureAppService_ContainerUsername_daa1c22753664ee6913bc2c12707f733 }}
