clearify triggers for workflow

--- a/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
+++ b/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
@@ -9,7 +9,7 @@ on:
     workflows: ["Python application"]
     branches: ["main"]
     types: 
-      - completed
+      - completed # requested, in_progress
   workflow_dispatch:
 
 jobs:
