--- a/.github/workflows/01-python-app.yml
+++ b/.github/workflows/01-python-app.yml
@@ -6,8 +6,10 @@ name: Python application
 on:
   push:
     branches: [ "main" ]
+    paths: "app/**"
   pull_request:
     branches: [ "main" ]
+    paths: "app/**"
 
 permissions:
   contents: read
