--- a/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
+++ b/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
@@ -13,6 +13,7 @@ on:
   workflow_dispatch:
 
 jobs:
+  # on-success:
   build:
     runs-on: 'ubuntu-latest'
 
@@ -35,3 +36,5 @@ jobs:
         push: true
         tags: sdailabsboxeuwacr01.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_daa1c22753664ee6913bc2c12707f733 }}/ghactions:${{ github.sha }}
         file: ./Dockerfile
+  # on-failure:
+  #  ...
