--- a/.github/workflows/01-python-app.yml
+++ b/.github/workflows/01-python-app.yml
@@ -6,10 +6,12 @@ name: Python application
 on:
   push:
     branches: [ "main" ]
-    paths: "app/**"
+    paths: 
+      - "**.py"
   pull_request:
     branches: [ "main" ]
-    paths: "app/**"
+    paths: 
+      - "**.py"
 
 permissions:
   contents: read
