--- a/.github/workflows/05-set_env_variable.yml
+++ b/.github/workflows/05-set_env_variable.yml
@@ -1,8 +1,7 @@
 name: Set date as env. variable
-
+# This var is only available in this workflow
 on: 
-  push:
-    branches: ["main"]
+# Manual trigger only
   workflow_dispatch:
 
 jobs:
