--- a/.github/workflows/05-set_env_variable.yml
+++ b/.github/workflows/05-set_env_variable.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env: 
-      MY_VAR: ${{ env.MY_VAR }}
+      MY_VAR: ${{ vars.MY_VAR }}
     steps:
       - name: Set current date as env variable
         run: echo "NOW=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
