--- a/.github/workflows/05-set_env_variable.yml
+++ b/.github/workflows/05-set_env_variable.yml
@@ -1,9 +1,7 @@
-name: Set date as env. variable
-# This var is only available in this workflow
-on: 
-# Manual trigger only
-  workflow_dispatch:
+name: Set date as env. variable and workflow var
 
+on: 
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,6 +14,5 @@ jobs:
         run: echo $NOW # UTC time
       - name: Echo Env var. set in repo
         run: |
-          echo $MY_VAR - MY_VAR env
-          echo "${{ vars.FOO }} - repo FOO vars"
-  
+          echo $MY_VAR - echoes MY_VAR workflow env
+          echo "${{ vars.FOO }} - echoes repository env var: FOO"
