--- a/.github/workflows/01-python-app.yml
+++ b/.github/workflows/01-python-app.yml
@@ -8,11 +8,11 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - "**.py"
+      - "app/**"
   pull_request:
     branches: [ "main" ]
     paths:
-      - "**.py"
+      - "app/**"
   workflow_dispatch:
 
 permissions:
