update & removed comments

--- a/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
+++ b/.github/workflows/02-build_push_sdai-sbox-gh-actions-app001.yml
@@ -5,11 +5,10 @@ name: Build container app to Azure Container Registry - sdai-sbox-gh-actions-app
 
 on:
   workflow_run:
-    # Triggers when "01-python-app.yml" is done.
     workflows: ["Python application"]
     branches: ["main"]
     types: 
-      - completed # requested, in_progress
+      - completed
   workflow_dispatch:
 
 jobs:
