--- a/.github/workflows/using_token.yml
+++ b/.github/workflows/using_token.yml
@@ -12,5 +12,6 @@ jobs:
         echo Repo - ${{ github.repository }}
         echo Sha - ${{ github.sha }}
         echo Owner - ${{ github.repository_owner }}
+        echo API URL - ${{ github.api_url }}
         
 
