--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -3,6 +3,7 @@ name: run script.py
 on:
   schedule:
     - cron: '0 0 * * 1' # At 00:00 on Monday
+  workflow_dispatch:
 
 env:
   GH_TOKEN: ${{ github.token }}
